--- a/workflows/daily_run.yml
+++ b/workflows/daily_run.yml
@@ -19,7 +19,7 @@ jobs:
         # If you have dependencies:
         # pip install -r requirements.txt
     - name: Run script
-      run: python script.py
+      run: python AMC_API.py
     - name: Commit and push if changed
       run: |
         git config --global user.email "action@github.com"
