--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -2,7 +2,9 @@ name: Daily Python Script Run
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Runs at 00:00 UTC every day
+    - cron: '0 0 * * *'  # Runs at 00:00 UTC
+    - cron: '0 12 * * *' # Runs at 12:00 UTC
+    - cron: '0 18 * * *' # Runs at 18:00 UTC
 
 jobs:
   run-script:
