--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -24,8 +24,8 @@ jobs:
       run: python AMC_API.py
     - name: Commit and push if changed
       run: |
-        git config --global user.email "action@github.com"
-        git config --global user.name "GitHub Action"
+        git config --global user.email "gyou0907@gmail.com"
+        git config --global user.name "EpiLogue09"
         git add -A
         git commit -m "Updated showtimes.json" -a || echo "No changes to commit"
         git push
