--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -14,10 +14,12 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.8'
+        python-version: '3.11'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install requests
+        python -m pip install json
         # If you have dependencies:
         # pip install -r requirements.txt
     - name: Run script
