--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -20,6 +20,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install requests
         python -m pip install json
+        python -m pip install serpapi
         # If you have dependencies:
         # pip install -r requirements.txt
     - name: Run script
