--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     - cron: '0 0 * * *'  # Runs at 00:00 UTC
     - cron: '0 12 * * *' # Runs at 12:00 UTC
-    - cron: '0 19 * * *' # Runs at 18:00 UTC
+    - cron: '0 21 * * *' # Runs at 18:00 UTC
 
 jobs:
   run-script:
@@ -25,9 +25,11 @@ jobs:
     - name: Run script
       run: python AMC_API.py
     - name: Commit and push if changed
+      env:
+        GITHUB_TOKEN: ${{ secrets.PAT }}  # Use the PAT secret
       run: |
         git config --global user.email "gyou0907@gmail.com"
         git config --global user.name "EpiLogue09"
         git add -A
         git commit -m "Updated showtimes.json" -a || echo "No changes to commit"
-        git push
+        git push https://${{ secrets.PAT }}@github.com/EpiLogue09/AMC_showtimes.git HEAD:main
