--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -2,9 +2,10 @@ name: Daily Python Script Run
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Runs at 00:00 UTC
-    - cron: '0 12 * * *' # Runs at 12:00 UTC
-    - cron: '0 21 * * *' # Runs at 18:00 UTC
+    - cron: '0 4 * * *'  # Runs at 04:00 UTC, 12:00 AM EST
+    - cron: '0 16 * * *' # Runs at 16:00 UTC, 12:00 PM EST
+    - cron: '0 20 * * *' # Runs at 22:00 UTC, 04:00 PM EST
+    - cron: '0 0 * * *'  # Runs at 00:00 UTC, 08:00 PM EST
 
 jobs:
   run-script:
