--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -2,25 +2,24 @@ name: Daily Python Script Run
 
 on:
   schedule:
-    - cron: '0 4 * * *'  # Runs at 04:00 UTC, 12:00 AM EST
-    - cron: '0 16 * * *' # Runs at 16:00 UTC, 12:00 PM EST
-    - cron: '0 20 * * *' # Runs at 22:00 UTC, 04:00 PM EST
-    - cron: '0 0 * * *'  # Runs at 00:00 UTC, 08:00 PM EST
+    - cron: '0 0 * * *'  # Runs at 00:00 UTC
+    - cron: '0 12 * * *' # Runs at 12:00 UTC
+    - cron: '0 18 * * *' # Runs at 18:00 UTC
+    - cron: '30 2 * * *' # Runs at 2:30 AM UTC (9:30 PM EST)
 
 jobs:
   run-script:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3  # Update to use Node.js 20
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4  # Update to use Node.js 20
       with:
         python-version: '3.11'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install requests
-        python -m pip install serpapi
+        python -m pip install requests serpapi
         # If you have dependencies:
         # pip install -r requirements.txt
     - name: Run script
@@ -32,5 +31,5 @@ jobs:
         git config --global user.email "gyou0907@gmail.com"
         git config --global user.name "EpiLogue09"
         git add -A
-        git commit -m "Updated showtimes.json" -a || echo "No changes to commit"
+        git commit -m "Updated JSON files" -a || echo "No changes to commit"
         git push https://${{ secrets.PAT }}@github.com/EpiLogue09/AMC_showtimes.git HEAD:main
