--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -13,6 +13,7 @@ on:
     - cron: '0 12 * * *' # Runs at 12:00 UTC
     - cron: '0 18 * * *' # Runs at 18:00 UTC
       always: true
+    workflow_dispatch:
 
 
 jobs:
