--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -13,25 +13,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v4  # Update to use Node.js 20
+      uses: actions/checkout@v3  # Update to use Node.js 20
     - name: Set up Python
       uses: actions/setup-python@v4  # Update to use Node.js 20
       with:
-        python-version: '3.11'
+        python-version: '3.8'
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install requests serpapi
-        # If you have dependencies:
-        # pip install -r requirements.txt
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run script
       run: python AMC_API.py
-    - name: Commit and push if changed
-      env:
-        GITHUB_TOKEN: ${{ secrets.PAT }}  # Use the PAT secret
+    - name: execute py script
       run: |
-        git config --global user.email "gyou0907@gmail.com"
-        git config --global user.name "EpiLogue09"
-        git add -A
-        git commit -m "Updated JSON files" -a || echo "No changes to commit"
-        git push https://${{ secrets.PAT }}@github.com/EpiLogue09/AMC_showtimes.git HEAD:main
+        python AMC_API.py
+        git config user.name EpiLogue09
+        git config user.email gyou0907@gmail.com
+        git add .
+        git commit -m "cron generated"
+        git push
