--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -2,7 +2,7 @@ name: Daily Python Script Run
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Runs every 5 minutes
+    - cron: '0 5 * * *'  # Runs every day at 00:00 UTC
   workflow_dispatch:  # Allow manual trigger
 
 jobs:
