--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -2,7 +2,7 @@ name: Daily Python Script Run
 
 on:
   schedule:
-    - cron: '0 5 * * *'  # Runs every day at 00:00 UTC
+    - cron: '30 4 * * *'  # Runs every day at 04:30 UTC, 00:30 EST
   workflow_dispatch:  # Allow manual trigger
 
 jobs:
