--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -19,11 +19,7 @@ jobs:
       run: |
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run script
-      env:
-        API_KEY: ${{ secrets.API_KEY }}  # Access the API key secret
-      run: |
-        echo "${API_KEY}" > serp_api_key.txt  # Write the API key to a file
-        python AMC_API.py
+      run: python AMC_API.py
     - name: execute py script
       run: |
         python AMC_API.py
