--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -21,6 +21,8 @@ jobs:
     - name: Run script
       run: python AMC_API.py
     - name: execute py script
+      env:
+        API_KEY: ${{ secrets.GOOG_API_KEY }}
       run: |
         python AMC_API.py
         git config user.name EpiLogue09
