--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -20,11 +20,11 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run script
       env:
-        API_KEY: ${{ secrets.GOOG_API_KEY }}
+        API_KEY: ${{ secrets.API_KEY }}
       run: python AMC_API.py
     - name: execute py script
       env:
-        API_KEY: ${{ secrets.GOOG_API_KEY }}
+        API_KEY: ${{ secrets.API_KEY }}
       run: |
         python AMC_API.py
         git config user.name EpiLogue09
